--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron">
+            <section class="botoes">
+                <button class="alterar alterar-azul" alterar onclick="trocaImagem('azul')">Robotron Azul</button>
+                <button class="alterar alterar-amarelo" alterar onclick="trocaImagem('amarelo')">Robotron Amarelo</button>
+                <button class="alterar alterar-branco" alterar onclick="trocaImagem('branco')">Robotron Branco</button>
+                <button class="alterar alterar-preto" alterar onclick="trocaImagem('preto')">Robotron Preto</button>
+                <button class="alterar alterar-rosa" alterar onclick="trocaImagem('rosa')">Robotron Rosa</button>
+                <button class="alterar alterar-vermelho" alterar onclick="trocaImagem('vermelho')">Robotron Vermelho</button>
+            </section>
+            <img class="robo" src="img/robotron_azul.png" alt="Robotron">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
